Show move cursor on dashboard edit

--- a/app/views/blazer/dashboards/_form.html.erb
+++ b/app/views/blazer/dashboards/_form.html.erb
@@ -12,6 +12,10 @@
 li:hover .glyphicon-remove {
   display: inline;
 }
+
+.list-group {
+  cursor: move;
+}
 </style>
 
 <%= form_for @dashboard do |f| %>
