--- a/app/views/blazer/dashboards/show.html.erb
+++ b/app/views/blazer/dashboards/show.html.erb
@@ -24,8 +24,8 @@
         </h3>
       </div>
       <div class="col-sm-3 text-right">
-        <%= link_to "Full Screen", full_screen_dashboard_path(@dashboard, variable_params), class: "btn btn-default" %>
         <%= link_to "Edit", edit_dashboard_path(@dashboard, variable_params), class: "btn btn-info" %>
+        <%= link_to "TV Mode", full_screen_dashboard_path(@dashboard, variable_params), class: "btn btn-primary" %>
       </div>
     </div>
   </div>
