Match smart variables when casting

--- a/app/views/blazer/queries/run.html.erb
+++ b/app/views/blazer/queries/run.html.erb
@@ -104,7 +104,7 @@
                         <%= blazer_format_value(k, v) %>
                       <% end %>
 
-                      <% if v2 = (@boom[k] || {})[v] %>
+                      <% if v2 = (@boom[k] || {})[v.to_s] %>
                         <div class="text-muted"><%= v2 %></div>
                       <% end %>
                     <% end %>
