--- a/app/views/layouts/blazer/application.html.erb
+++ b/app/views/layouts/blazer/application.html.erb
@@ -6,7 +6,7 @@
     <meta charset="utf-8" />
 
     <%= stylesheet_link_tag "blazer/application" %>
-    <%= javascript_include_tag "//www.google.com/jsapi", "blazer/application" %>
+    <%= javascript_include_tag "https://www.google.com/jsapi", "blazer/application" %>
     <% if blazer_maps? %>
       <%= stylesheet_link_tag "https://api.mapbox.com/mapbox.js/v2.2.2/mapbox.css" %>
       <%= javascript_include_tag "https://api.mapbox.com/mapbox.js/v2.2.2/mapbox.js" %>
