--- a/app/views/blazer/queries/_form.html.erb
+++ b/app/views/blazer/queries/_form.html.erb
@@ -138,6 +138,11 @@
     }
   });
 
+  $(document).on("change", "#chart_type", function () {
+    params.chart_type = $(this).val();
+    $("#run").click();
+  });
+
   $("form.the_form").on("submit", function() {
     $("#query_statement").val(editor.getValue());
     return true;
