Fixed daterangepicker for dashboards

--- a/app/views/blazer/dashboards/show.html.erb
+++ b/app/views/blazer/dashboards/show.html.erb
@@ -97,7 +97,9 @@
              "Last 7 Days": [dateStr(6), dateStr()],
              "Last 30 Days": [dateStr(29), dateStr()]
             },
-            format: format,
+            locale: {
+              format: format
+            },
             startDate: dateStr(29),
             endDate: dateStr(),
             opens: "left"
