Prevent accidental backspace navigation on query edit page

--- a/app/views/blazer/queries/_form.html.erb
+++ b/app/views/blazer/queries/_form.html.erb
@@ -1,3 +1,5 @@
+<% content_for :body_class, "disable-backspace-nav" %>
+
 <% if @query.errors.any? %>
   <div class="alert alert-danger"><%= @query.errors.full_messages.first %></div>
 <% end %>
