Use function to prevent backspace nav

--- a/app/views/blazer/queries/_form.html.erb
+++ b/app/views/blazer/queries/_form.html.erb
@@ -1,5 +1,3 @@
-<% content_for :body_class, "disable-backspace-nav" %>
-
 <% if @query.errors.any? %>
   <div class="alert alert-danger"><%= @query.errors.full_messages.first %></div>
 <% end %>
@@ -148,4 +146,6 @@
     $("#query_statement").val(editor.getValue());
     return true;
   });
+
+  preventBackspaceNav();
 </script>
