--- a/app/views/layouts/blazer/application.html.erb
+++ b/app/views/layouts/blazer/application.html.erb
@@ -13,7 +13,7 @@
     <% end %>
     <%= csrf_meta_tags %>
   </head>
-  <body class="<%= yield(:body_class) || "" %>">
+  <body>
     <div class="container">
       <%= yield %>
     </div>
