Change tab size from 4 to 2

--- a/app/views/blazer/queries/_form.html.erb
+++ b/app/views/blazer/queries/_form.html.erb
@@ -62,6 +62,7 @@
   editor.setTheme("ace/theme/twilight");
   editor.getSession().setMode("ace/mode/sql");
   editor.setOptions({
+    tabSize: 2,
     enableBasicAutocompletion: false,
     enableSnippets: false,
     enableLiveAutocompletion: false,
