Limit elements on page

--- a/app/views/blazer/queries/home.html.erb
+++ b/app/views/blazer/queries/home.html.erb
@@ -32,7 +32,8 @@
 
 <script>
   var options = {
-    valueNames: ['query', 'creator']
+    valueNames: ['query', 'creator'],
+    page: 200
   };
 
   function updateList() {
