Switched to Chart.js for charts

--- a/app/views/layouts/blazer/application.html.erb
+++ b/app/views/layouts/blazer/application.html.erb
@@ -6,10 +6,13 @@
     <meta charset="utf-8" />
 
     <%= stylesheet_link_tag "blazer/application" %>
-    <%= javascript_include_tag "https://www.google.com/jsapi", "blazer/application" %>
+    <script>
+      var Chartkick = {smarterDates: true, smarterDiscrete: true};
+    </script>
+    <%= javascript_include_tag "blazer/application" %>
     <% if blazer_maps? %>
-      <%= stylesheet_link_tag "https://api.mapbox.com/mapbox.js/v2.2.2/mapbox.css" %>
-      <%= javascript_include_tag "https://api.mapbox.com/mapbox.js/v2.2.2/mapbox.js" %>
+      <%= stylesheet_link_tag "https://api.mapbox.com/mapbox.js/v2.4.0/mapbox.css" %>
+      <%= javascript_include_tag "https://api.mapbox.com/mapbox.js/v2.4.0/mapbox.js" %>
     <% end %>
     <%= csrf_meta_tags %>
   </head>
